--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -112,172 +112,7 @@
             <div id="div_body_middle_left_PFCG" class="div_body_middle_left_section">
             </div>
         </div>
-        <div class="div_body_bottom">
-            <p class="p_div_body_bottom_title">便民服务</p>
-            <div class="div_body_bottom_section">
-                <p class="p_div_body_bottom_section_title">实用工具</p>
-                <ul class="ul_body_bottom_section">
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_gzjsq.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">工资计算器</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_wzcx.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">交通违章</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_czlcx.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">车质量查询</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_yygh.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">医院挂号</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_zxjsq.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">装修计算器</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_kdcx.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">快递查询</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="div_body_bottom_section" style="padding-left: 10px; width: 304px;">
-                <p class="p_div_body_bottom_section_title">车辆出行</p>
-                <ul class="ul_body_bottom_section">
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jsz.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">驾驶证</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_xsz.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">行驶证</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jjz.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">进京证</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_xcaq.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">行车安全</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">养车百科</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_gmgl.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">购买攻略</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="div_body_bottom_section" style="padding-left: 10px; width: 304px;">
-                <p class="p_div_body_bottom_section_title">生活经验</p>
-                <ul class="ul_body_bottom_section">
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_shqm.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">生活窍门</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_bjgl.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">搬家攻略</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_hqgl.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">婚庆攻略</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_zxzs.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">装修装饰</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_cyzs.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">创业知识</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_cszs.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">财税知识</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="div_body_bottom_section" style="padding-left: 10px; width: 254px; border: none">
-                <p class="p_div_body_bottom_section_title">办证攻略</p>
-                <ul class="ul_body_bottom_section">
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_cjrj.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">出境入境</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_syqz.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">生育亲子</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_sfhj.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">身份户籍</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_sbyl.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">社保医疗</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_fcjy.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">房产交易</p>
-                    </li>
-                    <li class="li_body_bottom_section">
-                        <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jhlz.png")" />
-                        </p>
-                        <p class="p_li_body_bottom_section">结婚领证</p>
-                    </li>
-                </ul>
-            </div>
+        <div class="div_body_bottom" style="display: none;">
         </div>
     </div>
     <div id="div_Foot" class="div_foot">
