--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -97,11 +97,11 @@
             </div>
             <div id="div_body_middle_left_ZP" class="div_body_middle_left_section">
             </div>
-            <div id="div_body_middle_left_CW" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_CW" class="div_body_middle_left_section" style="margin-right: 0;">
             </div>
-            <div id="div_body_middle_left_ES" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_ES" class="div_body_middle_left_section" style="width: 595px">
             </div>
-            <div id="div_body_middle_left_SHFW" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_SHFW" class="div_body_middle_left_section" style="width: 595px;margin-right: 0;">
             </div>
             <div id="div_body_middle_left_SWFW" class="div_body_middle_left_section">
             </div>
@@ -109,7 +109,7 @@
             </div>
             <div id="div_body_middle_left_ZSJM" class="div_body_middle_left_section">
             </div>
-            <div id="div_body_middle_left_PFCG" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_PFCG" class="div_body_middle_left_section" style="margin-right: 0;">
             </div>
         </div>
         <div class="div_body_bottom" style="display: none;">
