--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -91,19 +91,19 @@
             </div>
         </div>
         <div class="div_body_middle">
-            <div id="div_body_middle_left_FC" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_FC" class="div_body_middle_left_section" style="width: 595px">
             </div>
-            <div id="div_body_middle_left_CL" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_CL" class="div_body_middle_left_section" style="width: 595px;margin-right: 0;">
             </div>
-            <div id="div_body_middle_left_ZP" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_ZP" class="div_body_middle_left_section" style="width: 595px">
             </div>
-            <div id="div_body_middle_left_CW" class="div_body_middle_left_section" style="margin-right: 0;">
+            <div id="div_body_middle_left_ES" class="div_body_middle_left_section" style="width: 595px;margin-right: 0;">
             </div>
-            <div id="div_body_middle_left_ES" class="div_body_middle_left_section" style="width: 595px">
+            <div id="div_body_middle_left_SHFW" class="div_body_middle_left_section" style="width: 595px;">
             </div>
-            <div id="div_body_middle_left_SHFW" class="div_body_middle_left_section" style="width: 595px;margin-right: 0;">
+            <div id="div_body_middle_left_SWFW" class="div_body_middle_left_section"style="width: 595px;margin-right: 0;">
             </div>
-            <div id="div_body_middle_left_SWFW" class="div_body_middle_left_section">
+            <div id="div_body_middle_left_CW" class="div_body_middle_left_section">
             </div>
             <div id="div_body_middle_left_JYPX" class="div_body_middle_left_section">
             </div>
