--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -4,7 +4,7 @@
 
 .table_head {margin-bottom: 0 !important;}
 
-.span_cxlb {color: #5bc0de;cursor: pointer;font-size: 12px;margin-left: 2px;}
+.span_cxlb {color: #ad5b97;cursor: pointer;font-size: 12px;margin-left: 2px;}
 
 .div_content {width: 940px;padding-left: 20px;padding-top: 40px;background-color: #ffffff;border-bottom: 1px solid #cccccc;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom-left-radius:4px;border-bottom-right-radius:4px;}
 
@@ -55,7 +55,7 @@
 
 .Warn {font-size: 16px;color: #fd634f;margin-left: 220px;position: relative;display: block;}
 
-.Info {font-size: 16px;color: #5bc0de;margin-left: 220px;z-index: 999;position: relative;}
+.Info {font-size: 16px;color: #ad5b97;margin-left: 220px;z-index: 999;position: relative;}
 
 .div_bqss {margin-top: -7px;margin-left: -1px;width: 620px;height: 344px;border: 1px solid #ccc;background-color: #fff;}
 
@@ -86,7 +86,7 @@
 :-ms-input-placeholder.input_input {color: #999;}
 :-ms-input-placeholder.span_spaninput {color: #999;}
 
-.ui-state-active {background: #5bc0de !important;border: 1px solid #00bfe1 !important;}
+.ui-state-active {background: #ad5b97 !important;border: 1px solid #00bfe1 !important;}
 
 .ui-datepicker {width: 400px !important;}
 
