--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -21,7 +21,7 @@
 .div_row_left {color: black;text-align: right;margin-left: 100px;display: inline;font-size: 16px;}
 
 .div_row_right {display: inline;margin-left: 30px;position: relative;font-size: 16px;}
-.div_select_in
+
 .div_radio {cursor: pointer;display: inline-block;}
 
 .label_radio {font-weight: normal;font-size: 14px;margin-left: 10px;margin-right: 10px;}
@@ -40,18 +40,19 @@
 
 .ul_select {border-radius: 4px;text-align: center;width: 150px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
 
-.li_select {height: 34px;text-align: left;display: block;padding-left: 6px;line-height: 34px;font-size: 14px;cursor: pointer;color: #999999;background: #FFFFFF;}
+.li_select {height: 34px;text-align: left;display: block;padding-left: 6px;line-height: 34px;font-size: 16px;cursor: pointer;color: #999999;background: #FFFFFF;}
+
 .li_select:hover {background: #ececec;color: #333333;}
 
 .input_spaninput {width: 120px;margin-top: 1px;border: none;height: 30px;text-align: center;color: #000000 !important;}
 
-.span_spaninput {border: 1px solid #777777;display: inline-block;width: 150px;height: 40px;border-radius: 4px;font-size: 16px;}
+.span_spaninput {border: 2px solid #cccccc;display: inline-block;width: 150px;height: 40px;border-radius: 4px;font-size: 16px;}
 
 .spaninput_fontcolor {color: #999999;}
 
 .span_required {color: #F2272D;display: inline-block;width: 20px;height: 36px;font-family: "宋体", "SimSun";}
 
-.input_input {width: 472px;padding: 6px 12px;border: 1px solid #cccccc;border-radius: 4px;font-size: 14px;height: 34px;}
+.input_input {width: 472px;padding: 6px 12px;border: 2px solid #cccccc;border-radius: 4px;font-size: 14px;height: 40px;}
 
 .Warn {font-size: 16px;color: #fd634f;margin-left: 220px;position: relative;display: block;}
 
