--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -14,7 +14,7 @@
 
 .em_split {width: 900px;height: 1px;float: left;background: #cccccc;}
 
-.div_row {width: 900px;height: 60px;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 20px;position: relative;display: block;}
+.div_row {width: 900px;height: 60px;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 30px;position: relative;display: block;}
 
 .div_row_zp{width: 900px;height: auto;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 20px;position: relative;display: block;}
 
@@ -28,17 +28,17 @@
 
 .img_radio {width: 18px;height: 18px;cursor: pointer;border: none !important;}
 
-.div_select_out {display: inline-block;width: 150px;height: 40px;border-radius: 4px;border: 1px solid #777777;position: relative;}
+.div_select_out {display: inline-block;width: 160px;height: 40px;border-radius: 4px;border: 2px solid #cccccc;position: relative;}
 
-.div_select_in {display: inline-block;width: 150px;height: 40px;border-radius: 4px;font-size: 16px;border: none;}
+.div_select_in {display: inline-block;width: 160px;height: 40px;border-radius: 4px;font-size: 16px;border: none;}
 
 .div_select_dropdown {float: left;width: 150px;position: relative;z-index: 1001;}
 
-.span_select {display: inline-block;width: 120px;height: 30px;text-align: center;margin-top: 4px;}
+.span_select {display: inline-block;width: 130px;height: 30px;text-align: center;margin-top: 4px;}
 
 .span_select_arrow {background-image: url(../images/arrow_down.png);width: 16px;height: 16px;display: inline-block;vertical-align: middle;}
 
-.ul_select {border-radius: 4px;text-align: center;width: 150px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
+.ul_select {border-radius: 4px;margin-left: -2px;text-align: center;width: 150px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
 
 .li_select {height: 34px;text-align: left;display: block;padding-left: 6px;line-height: 34px;font-size: 16px;cursor: pointer;color: #999999;background: #FFFFFF;}
 
