--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
@@ -16,7 +16,7 @@
             <em class="em_split"></em>
         </div>
         <div id="divLX" class="div_row" style="z-index: 999">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类型</span>
             </div>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div id="divZJ" class="div_row" style="z-index: 997;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">租金</span>
             </div>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div id="divMJ" class="div_row" style="z-index: 995;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">面积</span>
             </div>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div id="divDZ" class="div_row" style="z-index: 994">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">地址</span>
             </div>
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div id="divGJ" class="div_row" style="z-index: 990">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">格局</span>
             </div>
@@ -163,7 +163,7 @@
             <div id="divTFSJTip" class="Warn" style="z-index: 998; position: relative;"></div>
         </div>
         <div id="divYJ" class="div_row" style="z-index: 995;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">押金</span>
             </div>
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div id="divDJ" class="div_row" style="z-index: 995;">
-            <div class="div_row_left" style="margin-left: 128px;">
+            <div class="div_row_left font_two">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">定金</span>
             </div>
@@ -291,7 +291,7 @@
         </div>
         <div id="divQQ" class="div_row" style="margin-top: -12px;" style="z-index: 993">
             <div class="div_row_left" style="margin-left: 133px;">
-                <span class="span_required"></span>
+                <span class="span_required font_two"></span>
                 <span id="spanQQ">QQ</span>
             </div>
             <div class="div_row_right">
