--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_HZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_HZF.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-    ViewBag.Title = "FC_HZF";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
@@ -23,7 +22,7 @@
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="div_row_right">
-                    <div class="div_select_out" style="z-index: 1000; position: relative; width: 595px; border: none;">
+                    <div class="div_select_out" style="z-index: 1000; width: 595px; border: none;">
                         <div id="divXQMCText" class="div_select_in SRK" style="border: none;">
                             <input id="XQMC" maxlength="30" column="XQMC" class="span_spaninput SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px;" type="text" placeholder="请输入小区名称" />
                             <input id="XQDZ" column="XQDZ" type="hidden" />
@@ -54,7 +53,7 @@
                     </span>
                     <span id="spanPFM" class="span_spaninput" style="width: 198px">
                         <span class="spaninput_fontcolor" style="margin-left: 8px">共</span>
-                        <input id="PFM" maxlength="7" column="PFM" class="input_spaninput spaninput_fontcolor" type="text" style="width: 100px;" />
+                        <input id="PFM" maxlength="7" column="PFM" class="input_spaninput spaninput_fontcolor" type="text" style="width: 90px;" />
                         <span class="spaninput_fontcolor">平（㎡）</span>
                     </span>
                     <div id="divFWLXTip" class="Warn" style="z-index: 995;"></div>
@@ -113,7 +112,7 @@
                 </div>
             </div>
             <div id="divCZJ" class="div_row" style="z-index: 990">
-                <div class="div_row_left" style="margin-left: 114px;">
+                <div class="div_row_left font-three">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">出租间</span>
                 </div>
@@ -257,7 +256,7 @@
                 <em class="em_split"></em>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 993">
-                <div class="div_row_left" style="margin-left: 114px;">
+                <div class="div_row_left font-three">
                     <span class="span_required">*</span>
                     <span id="spanLXDH">联系人</span>
                 </div>
@@ -277,7 +276,7 @@
                 </div>
             </div>
             <div id="divQQ" class="div_row" style="margin-top: -12px;" style="z-index: 993">
-                <div class="div_row_left" style="margin-left: 133px;">
+                <div class="div_row_left font-two">
                     <span class="span_required"></span>
                     <span id="spanQQ">QQ</span>
                 </div>
@@ -286,7 +285,7 @@
                 </div>
             </div>
             <div id="divKRZSJ" class="div_row" style="z-index: 994">
-                <div class="div_row_left" style="margin-left: 86px;">
+                <div class="div_row_left font-five">
                     <span class="span_required"></span>
                     <span id="spanKRZSJ">可入住时间</span>
                 </div>
