--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -22,7 +22,7 @@
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="div_row_right">
-                    <div class="div_select_out" style="z-index: 1000; position: relative; width: 595px; border: none;">
+                    <div class="div_select_out" style="z-index: 1000; width: 595px; border:none">
                         <div id="divXQMCText" class="div_select_in SRK" style="border: none;">
                             <input id="XQMC" maxlength="30" column="XQMC" class="span_spaninput SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px;" type="text" placeholder="请输入小区名称" />
                         </div>
@@ -226,7 +226,7 @@
                 <em class="em_split"></em>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 993">
-                <div class="div_row_left" style="margin-left: 75px;">
+                <div class="div_row_left font_three">
                     <span class="span_required">*</span>
                     <span id="spanLXDH">联系人</span>
                 </div>
@@ -246,7 +246,7 @@
                 </div>
             </div>
             <div id="divQQ" class="div_row" style="margin-top: -12px;" style="z-index: 993">
-                <div class="div_row_left" style="margin-left: 97px;">
+                <div class="div_row_left font_two">
                     <span class="span_required"></span>
                     <span id="spanQQ">QQ</span>
                 </div>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div id="divKRZSJ" class="div_row" style="z-index: 994">
-                <div class="div_row_left" style="margin-left: 44px;">
+                <div class="div_row_left font_five">
                     <span class="span_required"></span>
                     <span id="spanKRZSJ">可入住时间</span>
                 </div>
