--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -15,12 +15,18 @@
 .em_split {width: 900px;height: 1px;float: left;background: #cccccc;}
 
 .div_row {width: 900px;height: 60px;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 30px;position: relative;display: block;}
-.div_row_zp{width: 900px;height: auto;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 20px;position: relative;display: block;}
-.div_row_left {color: black;text-align: right;margin-left: 60px;display: inline;font-size: 16px;}
+.div_row_zp{width: 900px;height: 180px;text-align: left;padding-top: 2px;font-size: 15px;margin-left: 10px;margin-bottom: 20px;position: relative;display: block;}
+.div_row_zp_value{ height: auto;}
+.div_row_left {color: black;text-align: right;margin-left: 60px;display: inline;font-size: 16px;height: 170px; vertical-align: top;}
+.span_row_left_fwzp{width: 56px; display: inline-block;}
 .div_row_right {display: inline;margin-left: 30px;position: relative;font-size: 16px;}
+.div_row_right_bcms{ width: 594px; height: 240px; display: inline-block;}
+.div_row_right_zp_info{ margin-left: 185px; font-size: 14px; color: #999999;}
+.div_row .font_QQ{ margin-left: 98px;}
 .div_row .font_two{ margin-left: 92px;}
 .div_row .font_three{ margin-left: 75px;}
 .div_row .font_five{ margin-left: 44px;}
+
 
 .div_radio {cursor: pointer;display: inline-block;}
 
@@ -50,13 +56,13 @@
 
 .spaninput_fontcolor {color: #999999;}
 
-.span_required {color: #F2272D;display: inline-block;width: 20px;height: 36px;font-family: "宋体", "SimSun";}
+.span_required {vertical-align: top;color: #F2272D;display: inline-block;width: 20px;height: 36px;font-family: "宋体", "SimSun";}
 
 .input_input {width: 472px;padding: 6px 12px;border: 2px solid #cccccc;border-radius: 4px;font-size: 16px;height: 40px;}
 
-.Warn {font-size: 16px;color: #F2272D;margin-left: 180px;position: relative;display: block;}
+.Warn {font-size: 16px;color: #F2272D;margin-left: 180px;position: relative;display: block;margin-top: 6px;}
 
-.Info {font-size: 16px;color: #ad5b97;margin-left: 180px;z-index: 999;position: relative;}
+.Info {font-size: 16px;color: #ad5b97;margin-left: 180px;z-index: 999;position: relative;margin-top: 6px;}
 
 .div_bqss {margin-top: -7px;margin-left: -1px;width: 620px;height: 344px;border: 1px solid #ccc;background-color: #fff;}
 
