--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div id="divBCMS" class="div_row" style="height: 253px; position: relative; z-index: 991;">
-                <div class="div_row_left">
+                <div class="div_row_left" style="vertical-align: top;">
                     <span class="span_required">*</span>
                     <span id="spanBCMS">房源描述</span>
                 </div>
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div id="divFWZP" class="div_row_zp">
-                <div class="div_row_left">
+                <div class="div_row_left" style="vertical-align: top;">
                     <span class="span_required">*</span>
                     <span>上传照片</span>
                 </div>
@@ -200,7 +200,7 @@
                         </form>
                     </div>
                     <div class="div_row_right_zp_info">
-                        <span>最多20张，可多选上传，最大10mb。有图可使浏览量增加3倍，并会在推荐位显示。</span>
+                        <span>最多可上传16张，支持多选上传，图片格式jpg/png/jpeg等。有图可使浏览量增加3倍，并会在推荐位显示。</span>
                     </div>
                     <div id="divTPTip" class="Warn"></div>
                 </div>
@@ -246,12 +246,12 @@
                 </div>
             </div>
             <div id="divQQ" class="div_row" style="margin-top: -12px;" style="z-index: 993">
-                <div class="div_row_left font_QQ">
+                <div class="div_row_left font_three">
                     <span class="span_required"></span>
-                    <span>QQ</span>
+                    <span>微信号</span>
                 </div>
                 <div class="div_row_right">
-                    <input column="QQ" class="input_input SRK" type="text" placeholder="请输入QQ" />
+                    <input column="QQ" class="input_input SRK" type="text" placeholder="请输入微信号" />
                 </div>
             </div>
             <div id="divKRZSJ" class="div_row" style="z-index: 994">
