--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FC/FCXX_ZZF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FC/FCXX_ZZF.css
@@ -7,7 +7,7 @@
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 25px;font-weight: 700;height: 40px;padding: 10px;}
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll{ display: block;color: #999999;height: 40px;padding: 10px;}
 /*首页_主体_左部_信息主要内容*/
-.div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;}
+.div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_left{ width: 470px;height: 475px;float: left;}
 .div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show{ width: 460px;height: 350px;}
 .div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show:hover{ cursor: pointer;}
@@ -25,11 +25,8 @@
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj{ color: #bc6ba6;font-size: 35px;font-weight: 700;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zjdw{ color: #bc6ba6;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_yffs{ font-size: 16px;margin-left: 30px; }
-.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ height: 30px;width: 100%;padding: 20px 30px;}
-.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_left{ color: #999999;float: left;}
-.div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_right{ float: left;margin-left: 20px;}
-.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh{ border: 1px solid #bc6ba6;margin: 30px;padding: 16px 30px;width: 290px;height: 70px;font-size: 28px;color: #bc6ba6;}
-.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right_lxdh .img_body_left_body_right_lxdh{ width: 25px;height: 25px;margin-right: 10px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ height: 45px;width: 100%;padding: 20px 30px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_lxdh {font-size: 28px;color: #bc6ba6;}
 /*首页_主体_左部_房源详情*/
 .div_body .div_body_left .div_body_left_body_xq{ height: auto;}
 .div_body .div_body_left .div_body_left_body_xq .p_body_left_body_xq{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
