--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/Common/XXXX_Common.css
@@ -52,13 +52,13 @@
 .div_body .div_body_right .div_body_right_jjrtj{ width: 100%;height: 500px;float: right;margin-bottom: 20px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
 .div_body .div_body_right .div_body_right_jjrtj .p_body_right_jjrtj{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
 .div_body .div_body_right .ul_body_right_jjrtj{ padding: 0;height: 180px;width: 280px;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj{ width: 260px;display: block;height: 70px;margin-bottom: 15px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj{ width: 260px;display: block;height: 85px;margin-bottom: 15px;}
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj:hover{ cursor: pointer;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .img_li_body_right_jjrtj{ width: 70px;height: 70px;display: inline-block;float: left; }
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj{ width: 170px;height: 70px;display: inline-block;float: right; }
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_xq{ font-size: 12px;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_cs{ font-size: 12px;display: block;font-size: 12px;color: #999999}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_jg{ color: #bc6ba6;font-size: 12px;display: block;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .img_li_body_right_jjrtj{ width: 85px;height: 85px;display: inline-block;float: left; }
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj{ width: 170px;height: 70px;display: inline-block;float: right;font-size: 14px; }
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_xq{ }
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_cs{ display: block;color: #999999}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_jg{ color: #bc6ba6;display: block;}
 /*首页_主体_右部_相关类目*/
 .div_body .div_body_right .div_body_right_xglm{ width: 100%;height: 300px;float: right;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
 .div_body .div_body_right .div_body_right_xglm .p_body_right_xglm{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
