--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
@@ -11,31 +11,34 @@
 @section Section_Body {
     <div id="divCondition" class="div_condition">
         @*<ul class="ul_condition_head">
-            <li id="li_condition_head_qyzf" class="li_condition_head">区域找房</li>
-            <li id="li_condition_head_dtzf" class="li_condition_head">地铁找房</li>
-            <li id="li_condition_head_xqzf" class="li_condition_head">小区找房</li>
-        </ul>*@
+                <li id="li_condition_head_qyzf" class="li_condition_head">区域找房</li>
+                <li id="li_condition_head_dtzf" class="li_condition_head">地铁找房</li>
+                <li id="li_condition_head_xqzf" class="li_condition_head">小区找房</li>
+            </ul>*@
         <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_SJ" class="div_condition_body"></div>
         <div id="div_condition_body_PFM" class="div_condition_body"></div>
         <div id="div_condition_body_S" class="div_condition_body"></div>
-        
+        <div id="div_condition_body_CX" class="div_condition_body"></div>
+        <div id="div_condition_body_ZZLX" class="div_condition_body"></div>
+        <div id="div_condition_body_ZXQK" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
             <li class="li_condition_select_first">条件</li>
         </ul>
     </div>
+    <div class="div_condition_toggle">
+        <span id="span_condition_toggle" class="span_condition_toggle">更多选项<i id="i_condition_tottle" class="i_condition_tottle"></i></span>
+    </div>
     <div id="divBody" class="div_body">
         <ul class="ul_body_head">
-            <li class="li_body_head"></li>
+            <li id="li_body_head_first" class="li_body_head"></li>
             <li class="li_body_head">个人房源</li>
             <li class="li_body_head">经纪人</li>
-            <li class="li_body_head">热租房源</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
-            <ul id="ul_body_left" class="ul_body_left">
-            </ul>
+            <ul id="ul_body_left" class="ul_body_left"></ul>
             <div class="div_main_info_bottom">
                 <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
                 </div>
@@ -43,8 +46,7 @@
         </div>
         <div class="div_body_right">
             <p class="p_div_body_right">热门推荐</p>
-            <ul id="ul_body_right" class="ul_body_right">
-            </ul>
+            <ul id="ul_body_right" class="ul_body_right"></ul>
         </div>
     </div>
 }
